--- a/README
+++ b/README
@@ -1,29 +1,15 @@
-Instructions to push your code to code.google.com
+Instructions to run Biblioteca App
 =================================================
-1. Sign into GitHub and create a new repository
-        Repository name: twu-biblioteca-yourname
-        Privacy level: Public
-        Don't check "Initialize this repository with a README"
-        Add .gitignore: None
-        Add a license: Apache License 2.0
+1. Run Main
 
-2. Run 'git init' in the folder that was extracted from the downloaded .zip file, in order to
- initialize local repository.
+2. Enter a library number and password register into user.xml or add them to this file.
 
-3. Make a local commit.
-    $ git add -A
-    $ git commit -m “Initial commit”
+3. Choose the option 1 to set the item type.
 
-(Dont forget to add the hidden .idea folder, as it will make opening your project in Intellij easier.)
+4. Choose option 3 to checkout a book or movie (previously you must to choose a type in the option 1).
 
-4. After you are done with the local commit, you can share your code with "The World" by pushing it to your
- GitHub repository.
-    $ git remote add origin https://github.com/<YOUR-GITHUB-USERNAME>/twu-biblioteca-<YOURNAME>
-    $ git push origin master
+5. Choose option 4 to return a book or movie (previously you must to choose a type in the option 1).
 
-Instructions to open your code in Intellij
-==========================================
-1. Go to File -> Open (or Open Project)
-2. Select the directory containing the code
-DONE !
+6 Choose the option 5 to show the user information.
 
+Enjoy the Biblioteca App!
